# assigment-BST_Digital

./: .env.example  Dockerfile  Makefile  SOLUTION.md  db.sqlite3  pyproject.toml
R4C/: celery.py  settings.py  urls.py  utils.py
customers/: admin.py
customers/migrations/: 0002_alter_customer_id.py
orders/: admin.py  services.py  tasks.py  tests.py  urls.py  views.py
orders/migrations/: 0002_alter_order_id.py
robots/: admin.py  apps.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
robots/fixtures/: db_robots.json
robots/migrations/: 0002_alter_robot_id.py
robots/services/: services_main.py  services_reports.py
