[tool.poetry]
name = "assigment-bst-digital"
version = "0.1.0"
description = ""
authors = ["Dmitry Gorokhov <gorokhov86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
make = "^0.1.6.post2"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
pydantic = "^2.4.2"
celery = "^5.3.4"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
ipython = "^8.15.0"
flower = "^2.0.1"
coverage = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
